# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_binary",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [
        "//visibility:public",
    ],

)

drake_cc_library(
    name = "lightDarkPlant",
    srcs = ["lightDarkPlant.cc"],
    hdrs = ["lightDarkPlant.h"],
    deps = [
        "//common:default_scalars",
        "//systems/framework:leaf_system",
        "//systems/primitives:affine_system",
    ],
)

drake_cc_binary(
    name = "run_lightDark",
    srcs = ["run_lightDark.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = ["-realtime_factor=0.0"],
    deps = [
        ":lightDarkPlant",
        "//common:find_resource",
        "//attic/multibody:rigid_body_tree",
        "//attic/multibody:rigid_body_tree_construction",
        "//attic/multibody/rigid_body_plant:rigid_body_plant",
        "//attic/multibody/joints",
        "//systems/analysis",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:direct_collocation",
        "@gflags",
    ],
)

# drake_cc_googletest(
#     name = "robobee_dynamics_test",
#     data = [":models"],
#     deps = [
#         ":robobee_plant",
#         "//common:find_resource",
#         "//common/test_utilities:eigen_matrix_compare",
#         "//multibody:rigid_body_tree_construction",
#         "//multibody/parsers",
#         "//multibody/rigid_body_plant",
#         "//systems/analysis:simulator",
#         "//systems/framework:diagram",
#         "//systems/framework/test_utilities",
#         "//systems/primitives:constant_vector_source",
#     ],
# )

install_data()

add_lint_tests()
